--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="box4 box">
             <div class="box-content">
                 <h2>Fashion</h2>
-                <div class="box-image" style="background-image: url('WhatsApp\ Image\ 2023-11-05\ at\ 20.17.27_0150cd38.jpg');"></div>
+                <div class="box-image" style="background-image: url('box8_image.jpg');"></div>
                 <p><a>See more</a></p>
             </div>
         </div>
